# GSI

./: .gitignore  .gitmodules  CMakeLists.txt  README.discover  README_CRTM_FIXED_FILES  README_autotools  clean  cmake-build-cheyenne  cmake-build-yellowstone  compile  compile_gsi_newse.csh  config.h.in  config.lt  config.status  configure  configure.ac  libtool  makefile  makefile.am  makefile.in  makefile_DTC  modens.diff  setvars  test  test.txt  test01.txt  test02.txt
arch/: Config.pl  configure.defaults  configure.defaults_EMC  configure.defaults_HWRF  dave.c  davetest.c  hello.c  postamble  postamble.hwrf  test.c
build_efsoi/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  regression_var.out
core-libs/: CMakeLists.txt
doc/: README.discover
dtc/: clean  compile  configure  dtcbuild  dtcbuild_yellowstone  makefile_DTC
jobs/: JGDAS_EFSOI_FCST  JGDAS_ENKF_FCST  JGDAS_ENKF_POST  JGDAS_ENKF_RECENTER  JGLOBAL_AEROANALYSIS  JGLOBAL_ANALYSIS  JGLOBAL_ENKF_INNOVATE_OBS  JGLOBAL_ENKF_SELECT_OBS  JGLOBAL_ENKF_UPDATE
lib/: makefile_DTC
m4/: ax_pgi_version.m4
modulefiles/: modulefile.ProdGSI.cray  modulefile.ProdGSI.dell  modulefile.ProdGSI.discover  modulefile.ProdGSI.discover.gcc  modulefile.ProdGSI.discover.pgi  modulefile.ProdGSI.discover_opa  modulefile.ProdGSI.gaea  modulefile.ProdGSI.hera  modulefile.ProdGSI.hera.csh  modulefile.ProdGSI.jet  modulefile.ProdGSI.odin  modulefile.ProdGSI.orion  modulefile.ProdGSI.s4  modulefile.ProdGSI.theia  modulefile.ProdGSI.wcoss  modulefile.ProdGSI.wcoss_c  modulefile.ProdGSI.wcoss_d  modulefile.gdas_enkf.gaea  modulefile.gdas_enkf.theia  modulefile.global_gsi.gaea  modulefile.global_gsi.theia
regression/: corr_obs.sh  global_4denvar_T126_hiproc_updat.out  global_4denvar_T126_loproc_updat.out  global_4dvar_T62.sh  global_4dvar_T62_hiproc_updat.out  global_4dvar_T62_loproc_contrl.out  global_4dvar_T62_loproc_updat.out  global_C96_fv3aero.sh  global_T62.sh  global_T62_loproc_updat.out  global_T62_ozonly.sh  global_corr_obs.sh  global_enkf_T62.sh  global_fv3_4denvar_T126_loproc_updat.out  global_lanczos_T62.sh  global_lanczos_T62_loproc_updat.out  global_nemsio_T62.sh  hwrf_nmm_d2_hiproc_updat.out  hwrf_nmm_d2_loproc_contrl.out  hwrf_nmm_d2_loproc_updat.out  hwrf_nmm_d3_hiproc_updat.out  hwrf_nmm_d3_loproc_updat.out  multi_regression.sh  nmm_binary_loproc_updat.out  nmmb_nems_4denvar_hiproc_updat.out  nmmb_nems_4denvar_loproc_updat.out  regression_driver.sh  regression_namelists.sh  regression_namelists_db.sh  regression_nl_update.sh  regression_param.sh  regression_test.sh  regression_test_enkf.sh  regression_var.sh  rtma.sh  rtma_hiproc_updat.out  rtma_loproc_updat.out
run/: comgsi_namelist.sh  comgsi_namelist_chem.sh  (+13 more)
src/appl/: CMakeLists.txt  gsimain.f90
src/clddet.orig/: CMakeLists.txt  aerosol_detect.F90  aerosol_detect_setup.F90  cf_digital.intfb  cloud_detect.F90  cloud_detect_setup.F90  heapsort.F90  imager_cloud_detect.F90  makefile  movinga.F90
src/clddet.orig/save/: cloud_detect_wrapper.F90
src/extn/gmaoTimer/: CMakeLists.txt  m_gmaoTimer.F90  m_mergedList.F90  m_sysclocks.F90  m_zeit.F90
src/fv3gfs_ncio/: CMakeLists.txt  module_fv3gfs_ncio.F90
unit-tests/tests/: CMakeLists.txt  test_read_prepbufr.pf  test_read_wrf_nmm.pf  test_setupps.pf
util/EFSOI_Utilities/src/: CMakeLists.txt  efso_main.f90  efsoi.f90  efsoi_main.f90  fso.f90  gridinfo_efsoi.f90  gridinfo_gfs.f90  gridio_efso.f90  gridio_efsoi.f90  loadbal_efsoi.f90  loc_advection.f90  params.f90  scatter_chunks_efsoi.f90  statevec_efsoi.f90  statevec_fso.f90
util/EnKF/gfs/src/: CMakeLists.txt
util/EnKF/gfs/src/adderrspec.fd/: CMakeLists.txt
util/EnKF/gfs/src/adderrspec_nmcmeth_spec.fd/: CMakeLists.txt  Makefile.conf.gaea
util/EnKF/gfs/src/adjustps.fd/: CMakeLists.txt  Makefile  Makefile.conf.theia  adjustps.f90
util/EnKF/gfs/src/blendinc_nemsio.fd/: CMakeLists.txt  Makefile  Makefile.conf  hybens_smoothinfo
util/EnKF/gfs/src/calc_increment_ens.fd/: CMakeLists.txt  Makefile.conf.gaea  Makefile.conf.theia  calc_increment_ens.fd  fv3_interface.f90  gfs_nems_interface.f90  namelist_def.f90  variable_interface.f90
util/EnKF/gfs/src/calc_increment_ens2.fd/: Makefile.conf.gaea  Makefile.conf.theia  fv3_interface.f90  main.f90  namelist_def.f90  pmain.f90  variable_interface.f90
util/EnKF/gfs/src/calc_increment_nemsio.fd/: CMakeLists.txt  calc_increment_nemsio.f90
util/EnKF/gfs/src/calc_increment_serial.fd/: CMakeLists.txt  calc_increment.f90  fv3_interface.f90  gfs_nems_interface.f90  namelist_def.f90
util/EnKF/gfs/src/cnvnems.fd/: Makefile  Makefile.conf  Makefile.conf.gaea  Makefile.conf.theia  Makefile2  cnvnems.f90  cnvnemsp.f90  compile.sh
util/EnKF/gfs/src/getnstensmeanp.fd/: CMakeLists.txt  Makefile.conf.gaea
util/EnKF/gfs/src/getsfcensmeanp.fd/: CMakeLists.txt  Makefile.conf.gaea  getsfcensmeanp.fd
util/EnKF/gfs/src/getsfcnstensupdp.fd/: CMakeLists.txt  Makefile.conf.gaea
util/EnKF/gfs/src/getsigensmeanp_smooth.fd/: CMakeLists.txt  getsigensmeanp_smooth.fd
util/EnKF/gfs/src/getsigensmeanp_smooth_ncep.fd/: CMakeLists.txt  Makefile.conf.gaea  Makefile.conf.theia  getsigensmeanp_smooth_ncep.f90
util/EnKF/gfs/src/getsigensstatp.fd/: CMakeLists.txt  Makefile.conf.gaea  Makefile.conf.theia  getsigensstatp.f90  getsigensstatp.fd
util/EnKF/gfs/src/gribmean.fd/: CMakeLists.txt  Makefile.conf.gaea  gribmean.f90
util/EnKF/gfs/src/makeinc_nemsio.fd/: CMakeLists.txt  Makefile  blendinc.f90
util/EnKF/gfs/src/preproc/: CMakeLists.txt
util/EnKF/gfs/src/recenterncio_hybgain2.fd/: CMakeLists.txt  recenterncio_hybgain2.f90
util/EnKF/gfs/src/recenternemsiop_hybgain.fd/: CMakeLists.txt  recenternemsiop_hybgain.f90
util/EnKF/gfs/src/recentersigp.fd/: CMakeLists.txt  recentersigp.f90  recentersigp.fd
util/EnKF/gfs/src/recentersigp_hybgain.fd/: CMakeLists.txt  recentersigp_hybgain.f90
util/radar_process/reflectivity/: CMakeLists.txt  netCDFsub_geo.f90  prepobs_prep.bufrtable  process_CAPS_mosaic.f90  read_NSSL_mosaic.f90  read_grib2_mod.f90  run_mrmsdbz2bufr.sh  write_CAPSbufr_ref.f90
(+3090 files in other folders)
