cmake_minimum_required(VERSION 2.6)
if(BUILD_CLDDET)
  set (CLDDET_C_FLAGS "-g")
  set( CLDDET_DIR ${CMAKE_CURRENT_SOURCE_DIR})
  message("hey Clddet dir is ${CLDDET_DIR}")
  file(GLOB CLDDET_SRC ${CLDDET_DIR}/*.F90)
  set_source_files_properties( ${CLDDET_SRC} COMPILE_FLAGS ${CLDDET_C_FLAGS})
  add_library( clddet STATIC ${CLDDET_SRC} )
  set_target_properties( clddet PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY} )
endif()
