cmake_minimum_required(VERSION 2.6)
if(BUILD_EFSOI)
  file(GLOB LOCAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*90)
# set(Util_MODULE_DIRECTORY "${PROJECT_BINARY_DIR}/include/efsoi")
  message("HEY in efsoi!!!!")
  set_source_files_properties( ${LOCAL_SRC} PROPERTIES COMPILE_FLAGS ${ENKF_Fortran_FLAGS} )
  add_executable(global_efsoi.x  ${LOCAL_SRC} )
  set_target_properties( global_efsoi.x PROPERTIES COMPILE_FLAGS ${ENKF_Fortran_FLAGS} )
# set_target_properties( global_efsoi.x PROPERTIES Fortran_MODULE_DIRECTORY ${Util_MODULE_DIRECTORY} )
  SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${OMPFLAG}" )
# include_directories( ${CORE_INCS} ) 
  target_link_libraries( global_efsoi.x ${GSISHAREDLIB} ${GSILIB} ${enkfdeplib}  ${MPI_Fortran_LIBRARIES} )
endif()
